# irisHelper

./: .clang-format  .gitignore  CMakeLists.txt  Push.sh  README.md  build.sh
Module/: README.md  customize.sh  irisHelper  module.prop  service.sh  uninstall.sh
Module/config/: iris_helper_user_guide.md  iriscfgcustomize.conf
Test/: irisHelper  iriscfgcustomize.conf  点我启动irishelper.sh
build_speed/: build.sh  build_speed.sh  cat.sh
build_speed/patchfile/: headfile.txt
getAllSource/: cat.sh
magisk/: README.md  customize.sh  irisHelper  module.prop
magisk/config/: iris_helper_user_guide.md
source/: CMakeLists.txt  CMakeLists.txt.bak
source/src/: FindPerfmgr.cpp  GetTopApp.cpp  GetTopAppStream.cpp  NodeCtrl.cpp  ProfileMonitor.cpp  ReadProfile.cpp  Run.cpp  build.sh  irisHelper  main.cpp
source/src/absl/base/: options.h
source/src/include/: LockValue.h  Path.h  UnLockValue.h
src/: FeasNode.cpp  FindPerfmgr.cpp  GetTopApp.cpp  NodeCtrl.cpp  ProfileMonitor.cpp  ReadProfile.cpp  Run.cpp  Time.cpp  inotifyd.cpp  irisHelper.cpp
src/include/: LOG.h  LockValue.h  Path.h  UnLockValue.h  irisConfig.h
